src/index.css
@import "tailwindcss";

@theme {
  --color-bg: #ffffff;
  --color-section-title: #4f4f4f;
  --color-section-title-bg: #ffffff;
  --color-text: #646464;

  --color-grey-1: #d8d8d8;
  --color-grey-2: #8c8c8c;
  --color-grey-3: #4f4f4f;

  --color-accent-red: #991d1d;

  /*breakpoints*/
  --breakpoint-phone-sm: 360px;
  --breakpoint-phone-md: 412px;
  --breakpoint-phone-lg: 480px;
  --breakpoint-tablet-sm: 600px;
  --breakpoint-tablet-md: 768px;
  --breakpoint-tablet-lg: 820px;
  --breakpoint-desktop-sm: 1024px;
  --breakpoint-desktop-md: 1280px;
  --breakpoint-desktop-lg: 1440px;
  --breakpoint-desktop-xl: 1728px;
}

/*DARK MODE - doesn't have all the default colors altered, only the ones that need to be changed for better contrast and visibility*/

@media (prefers-color-scheme: dark) {
  :root {
    --color-bg: #646464;
    --color-section-title: #8c8c8c;
    --color-text: #ffffffb1;
    --color-section-title-bg: #4f4f4f;

    --color-grey-3: #ffffffb1;

    --color-accent-red: #632626;
  }
}

@font-face {
  font-display: swap;
  font-family: "Raleway";
  font-style: normal;
  font-weight: 300;
  src: url("/fonts/Raleway-Light.woff2") format("woff2");
}

@font-face {
  font-display: swap;
  font-family: "Raleway";
  font-style: normal;
  font-weight: 400;
  src: url("/fonts/Raleway-Regular.woff2") format("woff2");
}

@font-face {
  font-display: swap;
  font-family: "Raleway";
  font-style: normal;
  font-weight: 500;
  src: url("/fonts/Raleway-Medium.woff2") format("woff2");
}

@font-face {
  font-display: swap;
  font-family: "Raleway";
  font-style: normal;
  font-weight: 600;
  src: url("/fonts/Raleway-SemiBold.woff2") format("woff2");
}

@font-face {
  font-display: swap;
  font-family: "Raleway";
  font-style: normal;
  font-weight: 700;
  src: url("/fonts/Raleway-Bold.woff2") format("woff2");
}

@font-face {
  font-display: swap;
  font-family: "Raleway";
  font-style: normal;
  font-weight: 800;
  src: url("/fonts/Raleway-ExtraBold.woff2") format("woff2");
}

:root {
  /*div = divider*/
  --hero-div-w: 2px; /*the width of the dividers/
  --hero-mt: 0px; /*the margin-top of the hero section div*/

  --section-top-div-top: 18px; /*the top position of the top divider in the section*/
  --section-top-div-height: 64px; /*the height of the top divider in the section*/
  --section-bot-div-height: 88px; /*the height of the bottom divider in the section*/
  --section-bot-div-top: 148px; /*the top position of the bottom divider in the section*/

  --contacts-div-bot-top: 68px; /*the top position of the bottom divider in the contacts section*/
  --contacts-div-bot-height: 550px; /*the height of the bottom divider in the contacts section*/

  --h1-size: clamp(
    48px,
    calc(20vw - 24px),
    96px
  ); /*the font size of the h1 in the hero section*/

  --name-year-size: 1.5rem; /*the font size of the name and year in the hero section*/

  --part-label: clamp(1.2rem, calc(0.618rem + 2.909vw), 2.8rem);
  /*1.2rem → 2.8rem font size for sections' parts' labels (Part 1, Part 2, etc.) */

  --font-body-sm: clamp(
    0.75rem,
    -0.1196rem + 4.3478vw,
    1rem
  ); /* xs → base font size for projects' short descriptions */

  --font-section-label: clamp(1.5rem, 0.1765rem + 5.8824vw, 3rem);
  /* 3xl → 5xl font size for sections' labels (titles), e.g., About, Projects, Contacts */
  --font-page-number: clamp(
    1.25rem,
    0.9868rem + 1.1696vw,
    2.25rem
  ); /* xl → 4xl font size for page numbers */

  --max-w-text-sm: clamp(
    15rem,
    calc(2.647rem + 54.902vw),
    29rem
  ); /* max width of the text container for ~<768px */
  --max-w-text-lg: clamp(
    23rem,
    calc(9.182rem + 21.591vw),
    32.5rem
  ); /* max width of the text container for ~>768px */

  --author-img-size: clamp(
    6rem,
    calc(1.227rem + 23.864vw),
    27rem
  ); /* the size of the author's image in the description section */

  --contact-title-size: clamp(
    3rem,
    2.1429rem + 4.2857vw,
    6rem
  ); /* the font size of the title in the contacts section */

  --header-font-size: clamp(
    0.875rem,
    0.1196rem + 4.3478vw,
    1.25rem
  ); /* xs -> 3xl font size for the header */
}

@media (min-width: 360px) {
  :root {
    --section-top-div-top: 16px;
    --section-top-div-height: 100px;
    --section-bot-div-height: 124px;
    --section-bot-div-top: 186px;
  }
}

@media (min-width: 375px) {
  :root {
    --section-top-div-height: 86px;
    --section-bot-div-top: clamp(176px, calc(2.667px + 28.889vh), 228px);
    --section-bot-div-height: clamp(114px, calc(-25.2px + 23.2vh), 172px);
  }
}

@media (min-width: 390px) {
  :root {
    --hero-mt: 40px;

    --section-top-div-height: 124px;
    --section-bot-div-top: 222px;
  }
}

@media (min-width: 412px) {
  :root {
    --section-bot-div-height: 188px;

    --contacts-div-bot-height: 572px;

    --name-year-size: 1.875rem;
  }
}

@media (min-width: 428px) {
  :root {
    --section-bot-div-top: 230px;
  }
}

@media (min-width: 480px) {
  :root {
    --hero-mt: clamp(40px, calc(-515.692px + 64.615vh), 208px);
    --name-year-size: 2.25rem;

    --section-top-div-height: 116px;
    --section-bot-div-top: clamp(228px, calc(-116px + 40vh), 244px);
    --section-bot-div-height: 184px;
  }
}

/*600-820PX: TABLETS*/
@media (min-width: 600px) {
  :root {
    --hero-div-w: 3px;
    --hero-mt: 140px;

    --section-title-size: clamp(3rem, 0.8571rem + 5.7143vw, 6rem);

    --section-bot-div-top: clamp(244px, calc(-34.182px + 30.909vh), 312px);
    --section-top-div-height: 128px;

    --contacts-div-bot-height: 520px;
    --contacts-div-bot-top: 82px;
  }
}

@media (min-width: 768px) {
  :root {
    --section-top-div-height: 146px;
    --section-bot-div-height: 204px;

    --contacts-div-bot-height: 540px;

    --name-year-size: 3rem;
    --hero-mt: 164px;
  }
}

@media (min-width: 820px) {
  :root {
    --hero-mt: 198px;

    --section-top-div-height: clamp(136px, calc(78.4px + 8vh), 168px);
    --section-bot-div-top: clamp(280px, calc(222.4px + 8vh), 312px);
    --section-bot-div-height: clamp(188px, calc(137.6px + 7vh), 216px);

    --h1-size: clamp(96px, calc(-128px + 22.857vw), 128px);
  }
}

/*DESKTOPS*/
@media (min-width: 1024px) {
  :root {
    --hero-mt: 0px;

    --contacts-div-bot-top: 80px;
    --contacts-div-bot-height: 340px;

    --name-year-size: 3rem;

    .section-vh {
      min-height: 70dvh;
    }
  }
}

@media (min-width: 1280px) {
  :root {
    --section-top-div-height: 148px;
    --section-bot-div-height: 204px;
    --section-bot-div-top: clamp(280px, calc(-52.308px + 46.154vh), 400px);

    --contacts-div-bot-top: 96px;
    --contacts-div-bot-height: 384px;
  }
}

@media (min-width: 1440px) {
  :root {
    --hero-mt: 16px;

    --section-top-div-height: 164px;
    --section-bot-div-height: 228px;
  }
}

@media (min-width: 1728px) {
  :root {
    --section-bot-div-height: 272px;
    --section-top-div-height: clamp(188px, calc(-1184px + 140vh), 216px);

    --contacts-div-bot-height: 480px;

    --name-year-size: 3.75rem;
  }
}

.app-fullscreen {
  min-height: 100dvh;
  padding-bottom: env(safe-area-inset-bottom);
}

.section-vh {
  min-height: 50dvh;
}

html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

@media (prefers-reduced-motion: reduce) {
  html {
    scroll-behavior: auto;
  }
}

body {
  font-family:
    "Raleway",
    system-ui,
    -apple-system,
    "Segoe UI",
    Roboto,
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin: 0;
  line-height: 1.5;
  -webkit-text-size-adjust: 100%;
  position: relative;
  padding: 0;
}

html,
body,
:root {
  height: 100%;
}

.circle-drop {
  animation: dropBounce 800ms ease-out forwards;
}

@keyframes dropBounce {
  0% {
    opacity: 0;
    transform: translateY(-96px);
  }
  5% {
    opacity: 1;
  }
  60% {
    transform: translateY(0);
  }
  70% {
    transform: translateY(-16px);
  }
  85% {
    transform: translateY(0);
  }
  92% {
    transform: translateY(-5px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

